# rosbot

./: 50-ds4drv.rules  Dockerfile  README.md  bringup.launch.py  docker-compose.yaml  entrypoint.sh  start.sh
src/robocamp_rosbot/: CMakeLists.txt  package.xml
src/robocamp_rosbot/scripts/: color_sensor_node.py  oak_d_lite_node.py  sensor_node.py
src/robocamp_rosbot/src/: camera_node.cpp  lidar_node.cpp  motor_driver_node.cpp  robot_controller.cpp  robot_controller_node.cpp
